--- a/alist/provider.yaml
+++ b/alist/provider.yaml
@@ -6,16 +6,18 @@ description: Alist Provider
 language: python
 logo: https://raw.githubusercontent.com/evell1992/kubespider_plugin/main/alist/logo.png
 arguments:
-  - name: host
+  host:
     type: text
     description: Alist`s host
     placeholder: input your alist`s host
     required: true
     default:
-  - name: watch_dirs
-    type: list
+  watch_dirs:
+    type: array
     description: monitor dirs to download
     placeholder: input dirs to monitor
     required: true
     default: []
+    items:
+      type: text
 binary: https://raw.githubusercontent.com/evell1992/kubespider_plugin/main/alist/bin/provider
